--- a/HTML/basic.html
+++ b/HTML/basic.html
@@ -13,89 +13,113 @@
       <!-- Parent Container -->
       <div class="navbar">
         <!-- Navbar Container -->
-        <img src="/navbar.png" alt="navbar" />
+        <img src="/images/navbar.png" alt="navbar" />
       </div>
       <div class="child">
         <div class="sidebar">
-          <img src="/sidenav.png" alt="sidenav" />
+          <img src="/images/sidenav.png" alt="sidenav" />
           <!-- Sidebar Container -->
         </div>
         <div class="content">
           <div>
-            <a href="/nestle.html"><img src="/nestle.png" alt="nestle" /></a>
+            <a href="/nestle.html"
+              ><img class="image" src="/images/nestle.png" alt="nestle"
+            /></a>
           </div>
           <div>
-            <a href="/huawei.html"><img src="/huawei.png" alt="huawei" /></a>
+            <a href="/huawei.html"
+              ><img class="image" src="/images/huawei.png" alt="huawei"
+            /></a>
           </div>
           <div>
-            <a href="/tefal.html"><img src="/tefal.png" alt="tefal" /></a>
+            <a href="/tefal.html"
+              ><img class="image" src="/images/tefal.png" alt="tefal"
+            /></a>
           </div>
           <div>
-            <a href="/pigeon.html"><img src="/pigeon.jpg" alt="pigeon" /></a>
+            <a href="/pigeon.html"
+              ><img class="image" src="/images/pigeon.jpg" alt="pigeon"
+            /></a>
           </div>
           <div>
-            <a href="/sony.html"><img src="/sony.png" alt="sony" /></a>
+            <a href="/sony.html"
+              ><img class="image" src="/images/sony.png" alt="sony"
+            /></a>
           </div>
           <div>
-            <a href="/nestle.html"><img src="/nestle.png" alt="nestle" /></a>
+            <a href="/dettol.html"
+              ><img class="image" src="/images/dettol.jpg" alt="nestle"
+            /></a>
           </div>
           <div>
-            <a href="/huawei.html"><img src="/huawei.png" alt="huawei" /></a>
+            <a href="/oppo.html"
+              ><img class="image" src="/images/oppo.png" alt="huawei"
+            /></a>
           </div>
           <div>
-            <a href="/tefal.html"><img src="/tefal.png" alt="tefal" /></a>
+            <a href="/batteries.html"
+              ><img class="image" src="/images/batteries.png" alt="tefal"
+            /></a>
           </div>
           <div>
-            <a href="/pigeon.html"><img src="/pigeon.jpg" alt="pigeon" /></a>
+            <a href="/stabilo.html"
+              ><img class="image" src="/images/stabilo.jpg" alt="pigeon"
+            /></a>
           </div>
           <div>
-            <a href="/sony.html"><img src="/sony.png" alt="sony" /></a>
+            <a href="/gopro.html"
+              ><img class="image" src="/images/gopro.jpg" alt="sony"
+            /></a>
           </div>
           <div>
-            <a href="/nestle.html"><img src="/nestle.png" alt="nestle" /></a>
+            <a href="/caring.html"
+              ><img class="image" src="/images/caring.png" alt="nestle"
+            /></a>
           </div>
           <div>
-            <a href="/huawei.html"><img src="/huawei.png" alt="huawei" /></a>
+            <a href="/thundermatch.html"
+              ><img class="image" src="/images/thundermatch.png" alt="huawei"
+            /></a>
           </div>
           <div>
-            <a href="/tefal.html"><img src="/tefal.png" alt="tefal" /></a>
+            <a href="/Bosch.html"
+              ><img class="image" src="/images/Bosch.png" alt="tefal"
+            /></a>
           </div>
           <div>
-            <a href="/pigeon.html"><img src="/pigeon.jpg" alt="pigeon" /></a>
+            <a href="/loreal.html"
+              ><img class="image" src="/images/loreal.png" alt="pigeon"
+            /></a>
           </div>
           <div>
-            <a href="/sony.html"><img src="/sony.png" alt="sony" /></a>
+            <a href="/petpet.html"
+              ><img class="image" src="/images/petpet.png" alt="sony"
+            /></a>
           </div>
           <div>
-            <a href="/nestle.html"><img src="/nestle.png" alt="nestle" /></a>
+            <a href="/sunsilk.html"
+              ><img class="image" src="/images/sunsilk.png" alt="nestle"
+            /></a>
           </div>
           <div>
-            <a href="/huawei.html"><img src="/huawei.png" alt="huawei" /></a>
+            <a href="/khind.html"
+              ><img class="image" src="/images/khind.png" alt="huawei"
+            /></a>
           </div>
           <div>
-            <a href="/tefal.html"><img src="/tefal.png" alt="tefal" /></a>
+            <a href="/watsons.html"
+              ><img class="image" src="/images/watsons.png" alt="tefal"
+            /></a>
           </div>
-          <div>
-            <a href="/pigeon.html"><img src="/pigeon.jpg" alt="pigeon" /></a>
-          </div>
-          <div>
-            <a href="/sony.html"><img src="/sony.png" alt="sony" /></a>
-          </div>
-          <div>
-            <a href="/nestle.html"><img src="/nestle.png" alt="nestle" /></a>
-          </div>
-          <div>
-            <a href="/huawei.html"><img src="/huawei.png" alt="huawei" /></a>
-          </div>
-          <div>
-            <a href="/tefal.html"><img src="/tefal.png" alt="tefal" /></a>
-          </div>
-          <div>
-            <a href="/pigeon.html"><img src="/pigeon.jpg" alt="pigeon" /></a>
-          </div>
-          <div>
-            <a href="/sony.html"><img src="/sony.png" alt="sony" /></a>
-          </div>
+          <div>Coming Soon</div>
+          <div>Coming Soon</div>
+        </div>
+      </div>
+      <div id="footer">
+        <div class="center">
+          <span>Created By: <strong>Gabriel Mendoza</strong> | </span>
+          Github Account:
+          <a href="https://github.com/GabTheGreat25">GabTheGreat</a>
         </div>
       </div>
     </div>
