--- a/Y6p.html
+++ b/Y6p.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/nova-3i.jpg" alt="3i" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/nova-3i.jpg" alt="3i"
+            /></a>
           </td>
         </tr>
       </tbody>
