--- a/Y7a.html
+++ b/Y7a.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/Y7a.png" alt="Y7a" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/Y7a.png" alt="Y7a"
+            /></a>
           </td>
         </tr>
       </tbody>
