--- a/blender.html
+++ b/blender.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/blender.jpg" alt="blender"
+              ><img src="/images/blender.jpg" alt="blender"
             /></a>
           </td>
         </tr>
