--- a/bluetooth-earphone.html
+++ b/bluetooth-earphone.html
@@ -46,7 +46,9 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/bluetooth earphone.png" alt="bluetooth earphone"
+              ><img
+                src="/images/bluetooth earphone.png"
+                alt="bluetooth earphone"
             /></a>
           </td>
         </tr>
