--- a/bottle.html
+++ b/bottle.html
@@ -47,7 +47,7 @@
           <td>
             <a href="HTML/basic.html"
               ><img
-                src="/Ventilated-Nipple Nursing Bottle.png"
+                src="/images/Ventilated-Nipple Nursing Bottle.png"
                 alt="Ventilated-Nipple Nursing Bottle"
             /></a>
           </td>
