--- a/camera.html
+++ b/camera.html
@@ -44,7 +44,7 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/camera.png" alt="camera" /></a>
+            <a href="HTML/basic.html"><img src="/images/camera.png" alt="camera" /></a>
           </td>
         </tr>
       </tbody>
