--- a/dettol.html
+++ b/dettol.html
@@ -38,67 +38,67 @@
             this table and starts here -->
       <tbody>
         <tr>
-          <th>TV</th>
+          <th>Soap</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="tv.html"><img src="/images/tv.png" alt="tv" /></a>
-          </td>
-        </tr>
-        <tr>
-          <th>Headphone</th>
-          <td>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-            fugiat error labore modi perferendis cumque cupiditate dolorem iste
-            quasi officia!
-          </td>
-          <td>
-            <a href="headphone.html"
-              ><img src="/images/headphone.png" alt="headphone"
+            <a href="/soap.html"
+              ><img src="/images/soap.jpeg" alt="soap.jpeg"
             /></a>
           </td>
         </tr>
         <tr>
-          <th>Tablet</th>
+          <th>Antiseptic</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="tablet.html"
-              ><img src="/images/tablet.png" alt="tablet"
+            <a href="/antiseptic.html"
+              ><img src="/images/antiseptic.png" alt="antiseptic"
             /></a>
           </td>
         </tr>
         <tr>
-          <th>Camera</th>
+          <th>Handwash</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="camera.html"
-              ><img src="/images/camera.png" alt="camera"
+            <a href="/Handwash.html"
+              ><img src="/images/handwash.png" alt="handwash.png"
             /></a>
           </td>
         </tr>
         <tr>
-          <th>Bluetooth Earphone</th>
+          <th>Pacifier</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="bluetooth-earphone.html"
-              ><img
-                src="/images/bluetooth earphone.png"
-                alt="bluetooth earphone"
+            <a href="/pacifierz.html"
+              ><img src="/images/pacifier.png" alt="pacifier"
+            /></a>
+          </td>
+        </tr>
+        <tr>
+          <th>Sanitizer</th>
+          <td>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
+            fugiat error labore modi perferendis cumque cupiditate dolorem iste
+            quasi officia!
+          </td>
+          <td>
+            <a href="/sanitizer.html"
+              ><img src="/images/sanitizer.jpg" alt="Sanitizer"
             /></a>
           </td>
         </tr>
