--- a/food-processor.html
+++ b/food-processor.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/food processor.jpg" alt="processor"
+              ><img src="/images/food processor.jpg" alt="processor"
             /></a>
           </td>
         </tr>
