--- a/handwash.html
+++ b/handwash.html
@@ -37,14 +37,17 @@
       <!-- tbody tag specifies the body of 
             this table and starts here -->
       <tbody>
-          <th>Nova7i</th>
+        <tr>
+          <th>Handwash</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/images/nova 7i.jpg" alt="7i" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/handwash.png" alt="handwash.png"
+            /></a>
           </td>
         </tr>
       </tbody>
