--- a/headphone.html
+++ b/headphone.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/headphone.png" alt="headphone"
+              ><img src="/images/headphone.png" alt="headphone"
             /></a>
           </td>
         </tr>
