--- a/huawei.html
+++ b/huawei.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="/nova5t.html"><img src="/nova5t.jpg" alt="nova5t" /></a>
+            <a href="/nova5t.html"
+              ><img src="/images/nova5t.jpg" alt="nova5t"
+            /></a>
           </td>
         </tr>
         <tr>
@@ -56,7 +58,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="/nova-7i.html"><img src="/nova 7i.jpg" alt="7i" /></a>
+            <a href="/nova-7i.html"
+              ><img src="/images/nova 7i.jpg" alt="7i"
+            /></a>
           </td>
         </tr>
         <tr>
@@ -67,7 +71,7 @@
             quasi officia!
           </td>
           <td>
-            <a href="/Y7a.html"><img src="/Y7a.png" alt="Y7a" /></a>
+            <a href="/Y7a.html"><img src="/images/Y7a.png" alt="Y7a" /></a>
           </td>
         </tr>
         <tr>
@@ -78,7 +82,7 @@
             quasi officia!
           </td>
           <td>
-            <a href="/Y6p.html"><img src="/nova-3i.jpg" alt="3i" /></a>
+            <a href="/Y6p.html"><img src="/images/nova-3i.jpg" alt="3i" /></a>
           </td>
         </tr>
         <tr>
@@ -89,7 +93,7 @@
             quasi officia!
           </td>
           <td>
-            <a href="/nova-3i.html"><img src="/Y6P.png" alt="Y6P" /></a>
+            <a href="/nova-3i.html"><img src="/images/Y6P.png" alt="Y6P" /></a>
           </td>
         </tr>
       </tbody>
