--- a/kitkat.html
+++ b/kitkat.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="/HTML/basic.html"
-              ><img src="/kitkat.png" alt="kitkat"
+              ><img src="/images/kitkat.png" alt="kitkat"
             /></a>
           </td>
         </tr>
