--- a/lotion.html
+++ b/lotion.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/lotion.png" alt="lotion" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/lotion.png" alt="lotion"
+            /></a>
           </td>
         </tr>
       </tbody>
