--- a/milo.html
+++ b/milo.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/Milo.jpg" alt="Milo" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/Milo.jpg" alt="Milo"
+            /></a>
           </td>
         </tr>
       </tbody>
