--- a/nail-scisscor.html
+++ b/nail-scisscor.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/Nail scissor.png" alt="Nail scissor"
+              ><img src="/images/Nail scissor.png" alt="Nail scissor"
             /></a>
           </td>
         </tr>
