--- a/nescafe.html
+++ b/nescafe.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/nescafe.jpg" alt="nescafe"
+              ><img src="/images/nescafe.jpg" alt="nescafe"
             /></a>
           </td>
         </tr>
