--- a/nestle.html
+++ b/nestle.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="/kitkat.html"><img src="/kitkat.png" alt="kitkat" /></a>
+            <a href="/kitkat.html"
+              ><img src="/images/kitkat.png" alt="kitkat"
+            /></a>
           </td>
         </tr>
         <tr>
@@ -56,7 +58,7 @@
             quasi officia!
           </td>
           <td>
-            <a href="/milo.html"><img src="/Milo.jpg" alt="Milo" /></a>
+            <a href="/milo.html"><img src="/images/Milo.jpg" alt="Milo" /></a>
           </td>
         </tr>
         <tr>
@@ -68,7 +70,7 @@
           </td>
           <td>
             <a href="/smarties.html"
-              ><img src="/smarties.png" alt="smarties"
+              ><img src="/images/smarties.png" alt="smarties"
             /></a>
           </td>
         </tr>
@@ -80,7 +82,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="/cremora.html"><img src="/cremora.png" alt="cremora" /></a>
+            <a href="/cremora.html"
+              ><img src="/images/cremora.png" alt="cremora"
+            /></a>
           </td>
         </tr>
         <tr>
@@ -91,7 +95,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="/nescafe.html"><img src="/nescafe.jpg" alt="nescafe" /></a>
+            <a href="/nescafe.html"
+              ><img src="/images/nescafe.jpg" alt="nescafe"
+            /></a>
           </td>
         </tr>
       </tbody>
