--- a/non-stick-pan.html
+++ b/non-stick-pan.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/non stick pan.png" alt="pan"
+              ><img src="/images/non stick pan.png" alt="pan"
             /></a>
           </td>
         </tr>
