--- a/nova-3i.html
+++ b/nova-3i.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/Y6P.png" alt="Y6P" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/Y6P.png" alt="Y6P"
+            /></a>
           </td>
         </tr>
       </tbody>
