--- a/nova5t.html
+++ b/nova5t.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/nova5t.jpg" alt="nova5t" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/nova5t.jpg" alt="nova5t"
+            /></a>
           </td>
         </tr>
       </tbody>
