--- a/oppo.html
+++ b/oppo.html
@@ -38,67 +38,67 @@
             this table and starts here -->
       <tbody>
         <tr>
-          <th>TV</th>
+          <th>A-12</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="tv.html"><img src="/images/tv.png" alt="tv" /></a>
-          </td>
-        </tr>
-        <tr>
-          <th>Headphone</th>
-          <td>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-            fugiat error labore modi perferendis cumque cupiditate dolorem iste
-            quasi officia!
-          </td>
-          <td>
-            <a href="headphone.html"
-              ><img src="/images/headphone.png" alt="headphone"
+            <a href="/a12.html"
+              ><img src="/images/oppo-a12.jpg" alt="oppo-a12"
             /></a>
           </td>
         </tr>
         <tr>
-          <th>Tablet</th>
+          <th>A-16</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="tablet.html"
-              ><img src="/images/tablet.png" alt="tablet"
+            <a href="/a16.html"
+              ><img src="/images/oppo-a16.png" alt="oppo-a16"
             /></a>
           </td>
         </tr>
         <tr>
-          <th>Camera</th>
+          <th>A94</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="camera.html"
-              ><img src="/images/camera.png" alt="camera"
+            <a href="/a94.html"
+              ><img src="/images/oppo-a94.png" alt="oppo-a94"
             /></a>
           </td>
         </tr>
         <tr>
-          <th>Bluetooth Earphone</th>
+          <th>A95</th>
           <td>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
             fugiat error labore modi perferendis cumque cupiditate dolorem iste
             quasi officia!
           </td>
           <td>
-            <a href="bluetooth-earphone.html"
-              ><img
-                src="/images/bluetooth earphone.png"
-                alt="bluetooth earphone"
+            <a href="/a95.html"
+              ><img src="/images/oppo-a95.jpg" alt="oppo-a95"
+            /></a>
+          </td>
+        </tr>
+        <tr>
+          <th>A96</th>
+          <td>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
+            fugiat error labore modi perferendis cumque cupiditate dolorem iste
+            quasi officia!
+          </td>
+          <td>
+            <a href="/a96.html"
+              ><img src="/images/oppo-a96.png" alt="oppo-a96"
             /></a>
           </td>
         </tr>
