--- a/pacifier.html
+++ b/pacifier.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/pacifier.png" alt="pacifier"
+              ><img src="/images/pacifier.png" alt="pacifier"
             /></a>
           </td>
         </tr>
