--- a/rice-cooker.html
+++ b/rice-cooker.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/rice cooker.png" alt="rice cooker"
+              ><img src="/images/rice cooker.png" alt="rice cooker"
             /></a>
           </td>
         </tr>
