--- a/smarties.html
+++ b/smarties.html
@@ -45,7 +45,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/smarties.png" alt="smarties"
+              ><img src="/images/smarties.png" alt="smarties"
             /></a>
           </td>
         </tr>
