--- a/sun-screen.html
+++ b/sun-screen.html
@@ -46,7 +46,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/sun screen.png" alt="sun screen"
+              ><img src="/images/sun screen.png" alt="sun screen"
             /></a>
           </td>
         </tr>
