--- a/tablet.html
+++ b/tablet.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/tablet.png" alt="tablet" /></a>
+            <a href="HTML/basic.html"
+              ><img src="/images/tablet.png" alt="tablet"
+            /></a>
           </td>
         </tr>
       </tbody>
