--- a/tefal.html
+++ b/tefal.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="/blender.html"><img src="/blender.jpg" alt="blender" /></a>
+            <a href="/blender.html"
+              ><img src="/images/blender.jpg" alt="blender"
+            /></a>
           </td>
         </tr>
         <tr>
@@ -57,7 +59,7 @@
           </td>
           <td>
             <a href="/rice-cooker.html"
-              ><img src="/rice cooker.png" alt="rice cooker"
+              ><img src="/images/rice cooker.png" alt="rice cooker"
             /></a>
           </td>
         </tr>
@@ -70,7 +72,7 @@
           </td>
           <td>
             <a href="/non-stick-pan.html"
-              ><img src="/non stick pan.png" alt="pan"
+              ><img src="/images/non stick pan.png" alt="pan"
             /></a>
           </td>
         </tr>
@@ -83,7 +85,7 @@
           </td>
           <td>
             <a href="/food-processor.html"
-              ><img src="/food processor.jpg" alt="processor"
+              ><img src="/images/food processor.jpg" alt="processor"
             /></a>
           </td>
         </tr>
@@ -96,7 +98,7 @@
           </td>
           <td>
             <a href="/titanium-pan.html"
-              ><img src="/titanium pan.png" alt="titanium pan"
+              ><img src="/images/titanium pan.png" alt="titanium pan"
             /></a>
           </td>
         </tr>
