--- a/tv.html
+++ b/tv.html
@@ -45,7 +45,7 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/tv.png" alt="tv" /></a>
+            <a href="HTML/basic.html"><img src="/images/tv.png" alt="tv" /></a>
           </td>
         </tr>
       </tbody>
