--- a/cremora.html
+++ b/cremora.html
@@ -44,7 +44,7 @@
             quasi officia!
           </td>
           <td>
-            <a href="HTML/basic.html"><img src="/cremora.png" alt="cremora" /></a>
+            <a href="HTML/basic.html"><img src="/images/cremora.png" alt="cremora" /></a>
           </td>
         </tr>
       </tbody>
