--- a/pigeon.html
+++ b/pigeon.html
@@ -45,7 +45,9 @@
             quasi officia!
           </td>
           <td>
-            <a href="/lotion.html"><img src="/lotion.png" alt="lotion" /></a>
+            <a href="/lotion.html"
+              ><img src="/images/lotion.png" alt="lotion"
+            /></a>
           </td>
         </tr>
         <tr>
@@ -58,7 +60,7 @@
           <td>
             <a href="/bottle.html"
               ><img
-                src="/Ventilated-Nipple Nursing Bottle.png"
+                src="/images/Ventilated-Nipple Nursing Bottle.png"
                 alt="Ventilated-Nipple Nursing Bottle"
             /></a>
           </td>
@@ -72,7 +74,7 @@
           </td>
           <td>
             <a href="/sun-screen.html"
-              ><img src="/sun screen.png" alt="sun screen"
+              ><img src="/images/sun screen.png" alt="sun screen"
             /></a>
           </td>
         </tr>
@@ -85,7 +87,7 @@
           </td>
           <td>
             <a href="/pacifier.html"
-              ><img src="/pacifier.png" alt="pacifier"
+              ><img src="/images/pacifier.png" alt="pacifier"
             /></a>
           </td>
         </tr>
@@ -98,7 +100,7 @@
           </td>
           <td>
             <a href="/nail-scisscor.html"
-              ><img src="/Nail scissor.png" alt="Nail scissor"
+              ><img src="/images/Nail scissor.png" alt="Nail scissor"
             /></a>
           </td>
         </tr>
