--- a/titanium-pan.html
+++ b/titanium-pan.html
@@ -45,7 +45,7 @@
           </td>
           <td>
             <a href="HTML/basic.html"
-              ><img src="/titanium pan.png" alt="titanium pan"
+              ><img src="/images/titanium pan.png" alt="titanium pan"
             /></a>
           </td>
         </tr>
